--- a/navigate.html
+++ b/navigate.html
@@ -79,9 +79,9 @@
 			if (id == 'home')
 				window.open("https://www.notion.so/TEMPLATE-Comic-Book-Library-1-a410a8f423914e0ead453c167814f1f2?pvs=4").focus()
       else if (id == 'library')
-				window.open("https://www.notion.so/b39eacacfd374e479342d2e91ab05cc7?v=46d173a7f60d416ca995ffe0190c6d3a&pvs=4", '_blank').focus()
+				window.open("https://www.notion.so/b39eacacfd374e479342d2e91ab05cc7?v=46d173a7f60d416ca995ffe0190c6d3a&pvs=4").focus()
       else if (id == 'characters')
-				window.open("https://www.notion.so/6b9fdad5740a496ebfe17ecf77473b31?v=6db46bd2b9bb4dbf91118b8cf3a2b3b0&pvs=4", '_blank').focus()
+				window.open("https://www.notion.so/6b9fdad5740a496ebfe17ecf77473b31?v=6db46bd2b9bb4dbf91118b8cf3a2b3b0&pvs=4").focus()
 		}
 	</script>
 
